// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders \`HexInput\` component 1`] = `
<input
  maxlength="6"
  spellcheck="false"
  value="F00"
/>
`;

exports[`Renders proper HTML 1`] = `
<div
  class="react-colorful container"
>
  <div
    class="react-colorful__saturation saturation"
    style="background-color: rgb(255, 0, 0);"
  >
    <div
      class="react-colorful__saturation-pointer pointer"
      style="top: 0%; left: 100%; background-color: rgb(255, 0, 0);"
    />
    <div
      class="interactive"
    />
  </div>
  <div
    class="react-colorful__hue hue"
  >
    <div
      class="react-colorful__hue-pointer pointer"
      style="top: 50%; left: 0%; background-color: rgb(255, 0, 0);"
    />
    <div
      class="interactive"
    />
  </div>
</div>
`;

exports[`Works with no props 1`] = `
<div
  class="react-colorful container"
>
  <div
    class="react-colorful__saturation saturation"
    style="background-color: rgb(255, 0, 0);"
  >
    <div
      class="react-colorful__saturation-pointer pointer"
      style="top: 100%; left: 0%; background-color: rgb(0, 0, 0);"
    />
    <div
      class="interactive"
    />
  </div>
  <div
    class="react-colorful__hue hue"
  >
    <div
      class="react-colorful__hue-pointer pointer"
      style="top: 50%; left: 0%; background-color: rgb(255, 0, 0);"
    />
    <div
      class="interactive"
    />
  </div>
</div>
`;
